exports[`compile fixtures to snapshots: alternative-name.js 1`] = `
"import create from \"react-simple\";

const Foo = create(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: argument-shadow.js 1`] = `
"import simple from \"react-simple\";

function fn(simple) {
    var no = simple();
}

function outer(simple) {
    function inner() {
        var no = simple();
    }
}"
`;

exports[`compile fixtures to snapshots: basic.js 1`] = `
"import simple from \"react-simple\";

const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: export.js 1`] = `
"import simple from \"react-simple\";

export const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: inside-function.js 1`] = `
"
import simple from \"react-simple\";

function fn() {
    const Foo = simple(\"div\", {
        color: \"red\"
    });
    Foo.displayName = \"Foo\";
}

function outer() {
    function inner() {
        const Foo = simple(\"div\", {
            color: \"red\"
        });
        Foo.displayName = \"Foo\";
    }
}"
`;
